@@ -19,11 +19,14 @@ before_install:
   - curl -OL http://raw.github.com/craigcitro/r-travis/master/scripts/travis-tool.sh
   - chmod 755 ./travis-tool.sh
   - ./travis-tool.sh bootstrap
+  # my PPA was needed at some point but I now think Michael's may have everything
   - sudo add-apt-repository -y ppa:edd/misc
+  # we need this to make r-cran-rcppoctave work as it needs a more recent Octave from here
+  - sudo add-apt-repository -y ppa:octave/stable
   - sudo apt-get update -q
 
 install:
-  - ./travis-tool.sh install_aptget r-cran-rcpp r-cran-rcpparmadillo r-cran-xts r-cran-expm
+  - ./travis-tool.sh install_aptget r-cran-rcpp r-cran-rcpparmadillo r-cran-xts r-cran-expm r-cran-rcppoctave
 
 script: 
   - ./travis-tool.sh run_tests
